fix: Corrigindo create e delete de card.